# GTO_Poker_Bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: convergence_plots.py
core/: __init__.py  cfr.py  cfr_plus.py  dcfr.py  exploitability.py  game_engine.py  kuhn_poker.py  leduc_poker.py  mccfr.py
notebooks/: run_everything.ipynb  run_everything.py
opponent_model/: __init__.py  dirichlet_model.py  hypothesis_test.py  range_model.py  strategy_mixer.py
tests/: test_cfr_convergence.py  test_exploitability.py  test_kuhn_game.py  test_leduc_game.py  test_opponent_model.py  test_trading.py
trading/: __init__.py  glosten_milgrom.py
