[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gto-poker-bot"
version = "0.1.0"
description = "CFR-based poker solving and opponent modeling utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.1.3",
  "scipy==1.14.1",
  "matplotlib==3.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
