[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gto-poker-bot"
version = "0.2.0"
description = "CFR-based poker solving, opponent modeling, and interactive play - with market microstructure theory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.1.3",
  "scipy==1.14.1",
  "matplotlib==3.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[project.scripts]
gto-poker-bot = "core.game_engine:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

